# HugEngine

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini
Engine/: CMakeLists.txt
Engine/Asset/: CMakeLists.txt  README.md
Engine/Asset/Private/: BindlessTextureManager.cpp  glTFLoader.cpp
Engine/Core/: CMakeLists.txt  README.md
Engine/Core/Containers/: Array.h
Engine/Core/Core/: Assert.h  Core.h  Engine.cpp  Engine.h  Log.cpp  Log.h  Platform.h  Types.h
Engine/Core/Math/: Geometry.cpp  Geometry.h  Math.h
Engine/Core/Memory/: Allocator.h
Engine/Core/Platform/: Window.cpp  Window.h
Engine/Core/Threading/: JobSystem.cpp  JobSystem.h
Engine/Editor/: CMakeLists.txt  README.md
Engine/Editor/Editor/: CVar.cpp  Command.cpp  EditorContext.h  ImGuiIntegration.cpp  ImGuiIntegration.h
Engine/Editor/Private/: EditorContext.cpp  ImGuiIntegration.cpp  SceneSerializer.cpp
Engine/RHI/: CMakeLists.txt  README.md  TransientResourceAllocator.cpp  TransientResourceAllocator.h
Engine/RHI/D3D12/: D3D12Device.cpp
Engine/RHI/Private/: RHIBase.cpp
Engine/RHI/RHI/: Buffer.h  CommandList.h  MeshShader.h  QueryPool.h  RHI.h  RHIBase.cpp  RayTracing.h  Shader.h  SwapChain.h  Types.h
Engine/RHI/Vulkan/: DeferredDestructionQueue.h  PSOPrecompileManager.cpp  PSOPrecompileManager.h  VulkanCommandList.cpp  VulkanCommandList.h  VulkanCommandList_RenderPass.cpp  VulkanCommandList_Submit.cpp  VulkanConverters.cpp  VulkanConverters.h  VulkanDGC.cpp  VulkanDGC.h  VulkanDevice.cpp  VulkanDevice.h  VulkanDevice_DebugUtils.cpp  VulkanDevice_Descriptors.cpp  VulkanDevice_MeshShader.cpp  VulkanDevice_RT.cpp  VulkanInternal.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPipelineState.h  VulkanQueryPool.h  VulkanRT.cpp  VulkanRT.h  VulkanRayTracing.cpp  VulkanResources.cpp  VulkanResources.h  VulkanSwapChain.cpp  VulkanSwapChain.h
Engine/Reflect/: CMakeLists.txt  README.md
Engine/Reflect/Private/: TypeRegistry.cpp
Engine/Reflect/Reflect/: Attribute.h  ReflectionAPI.h  ReflectionMacros.h  TypeInfo.h
Engine/Render/: CMakeLists.txt  README.md  RenderGraph.cpp  RenderGraph.h  SceneRenderer.cpp  SceneRenderer.h  ShaderHotReload.cpp  ShaderHotReload.h
Engine/Render/AntiAliasing/: AA_FXAA.cpp  AA_FXAA.h  AA_MSAA.h  AA_None.h  AA_SMAA.cpp  AA_SMAA.h  AA_TAA.cpp  AA_TAA.h  AntiAliasing.h
Engine/Render/GI/: GI_DDGI.cpp  GI_DDGI.h  GI_IBL.cpp  GI_IBL.h  GI_None.cpp  GI_None.h  GI_RSM.cpp  GI_RSM.h  GI_SSGI.cpp  GI_SSGI.h  GI_SSR.cpp  GI_SSR.h  GlobalIllumination.h
Engine/Render/Pipeline/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  ClusteredShading.cpp  ClusteredShading.h  DeferredPipeline.cpp  DeferredPipeline.h  DeferredPipeline_FrameGraph.cpp  ForwardPipeline.cpp  ForwardPipeline.h  ForwardPipeline_FrameGraph.cpp  GBufferRenderer.h  GBufferRenderer_CPU.cpp  GBufferRenderer_CPU.h  GBufferRenderer_GPU.cpp  GBufferRenderer_GPU.h  GPUCulling.cpp  GPUCulling.h  GPUScene.cpp  GPUScene.h  GPUWorkGraph.cpp  GPUWorkGraph.h  IRenderPipeline.h  Material.h  MeshBatcher.cpp  MeshBatcher.h  ParticleRenderer.cpp  ParticleRenderer.h  PhysicalCamera.cpp  PhysicalCamera.h  PhysicalLight.h  RTPass.cpp  RTPass.h
Engine/Render/PostProcess/: AutoExposurePass.cpp  AutoExposurePass.h  BloomPass.cpp  BloomPass.h  ColorGradingPass.cpp  ColorGradingPass.h  DOFPass.cpp  DOFPass.h  Denoiser.cpp  Denoiser.h  GaussianBlurPass.cpp  GaussianBlurPass.h  MotionBlurPass.cpp  MotionBlurPass.h  PostProcessPass.h  SSAO.cpp  SSAO.h  SSGI.cpp  SSGI.h  SkyboxPass.cpp  SkyboxPass.h  ToneMapPass.cpp  ToneMapPass.h
Engine/Render/Private/: RenderGraph.cpp
Engine/Render/Profiler/: ProfilerManager.cpp  ProfilerManager.h  ProfilerPanel.cpp  ProfilerPanel.h
Engine/Render/Shadow/: CSMTechnique.cpp  CSMTechnique.h  IShadowSystem.h  IShadowTechnique.h  PointShadowTechnique.cpp  PointShadowTechnique.h  ShadowNone.h  ShadowSystem.cpp  ShadowSystem.h  SpotShadowTechnique.cpp  SpotShadowTechnique.h
Engine/Render/Subsystem/: RenderSubsystem.h
Engine/Scene/: CMakeLists.txt  README.md
Engine/Scene/Private/: LightComponent.cpp  MeshComponent.cpp  SceneGraph.cpp  SceneReflect.cpp  World.cpp
Engine/Scene/Scene/: AnimationComponent.cpp  CameraComponent.h  Component.h  CubeComponent.cpp  CubeComponent.h  LightComponent.h  ParticleComponent.cpp  ParticleComponent.h  SceneGraph.h  SceneReflect.cpp  SkyboxComponent.cpp  SkyboxComponent.h  SphereComponent.cpp  SphereComponent.h
Engine/Serialize/: CMakeLists.txt
Engine/Serialize/Private/: BinaryArchive.cpp
Engine/Serialize/Serialize/: Archive.h
Engine/Shader/: CMakeLists.txt  CompileShaders.cmake  README.md  spv_to_header.py
Engine/Shader/Shaders/: AutoExposure.comp.slang  BloomComposite.frag.slang  BrightPass.frag.slang  ColorGrading.frag.slang  DDGI.comp.slang  DOF_CoC.frag.slang  DOF_Composite.frag.slang  DeferredLighting.frag.slang  DeferredLighting.vert.slang  Denoise.frag.slang  FXAA.frag.slang  FXAA.vert.slang  Fullscreen.vert.slang  FullscreenCopy.frag.slang  GBuffer.frag.slang  GBuffer.mesh.slang  GBuffer.vert.slang  GPUCull.comp.slang  GPUCull_Phase1.comp.slang  GPUCull_TwoPhase.comp.slang  GaussianBlur.frag.slang  HiZDownsample.comp.slang  IBL_BRDF_LUT.frag.slang  IBL_BRDF_LUT.vert.slang  IBL_Irradiance.frag.slang  IBL_Irradiance.vert.slang  IBL_Prefilter.frag.slang  IBL_Prefilter.vert.slang  MotionBlur.frag.slang  PBR.frag  PBR.frag.slang  PBR.vert  PBR.vert.slang  PersistentCull.comp.slang  RSM_Generate.frag.slang  RSM_Generate.vert.slang  RT_Background.rmiss.slang  RT_Bindless.rcall.slang  RT_Common.rchit.slang  RT_Common.rmiss.slang  (+36 more)
Samples/02.Cube/: 02.Cube.cpp  CMakeLists.txt  main.cpp
Samples/03.Sponza/: 03.Sponza.cpp  CMakeLists.txt  main.cpp
Samples/04.Deferred/: 04.Deferred.cpp  CMakeLists.txt  main.cpp
Samples/Editor/: CMakeLists.txt  EditorApp.cpp  EditorApp.h  main.cpp
Samples/Editor/Panels/: ConsolePanel.cpp  ConsolePanel.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  DetailsPanel.cpp  DetailsPanel.h  Gizmo.cpp  Gizmo.h  LevelLoader.cpp  LevelLoader.h  MaterialEditor.cpp  OutlinerPanel.h  (+8 more)
(+94 files in other folders)
